# ArcaTele

./: .gitignore  ArcaTele.cpp  ArcaTele.h  ArcaTeleGlob.h  ArcateleGlob.cpp  CMakeLists.txt  LICENSE  Map.cpp  Map.h  PreTelit.cpp  PreTelit.h  PreTelitLocal.h  PreTelitZona1.cpp  PreTelitZona1.h  PreTelitZona1Local.h  README.md  map.h  messcolorsubzone1.txt  pretel.it.cpp  pretelit.h  ptit.cpp  ptit.h  ptitz1.cpp  ptitz1.h  ptitz1c.h  ptitz1l.h  ptitz2.cpp
